--- a/package.json
+++ b/package.json
@@ -11,18 +11,18 @@
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^10.1.0",
     "css-loader": "^6.5.1",
-    "eslint-webpack-plugin": "^3.2.0",
     "eslint": "7.0.0",
+    "eslint-webpack-plugin": "^3.2.0",
     "html-webpack-plugin": "^5.5.0",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.3",
     "webpack": "^5.65.0",
-    "webpack-cli": "^4.9.1"
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.9.3"
   },
   "dependencies": {
-    "nouislider": "^15.5.0",
-    "webpack-dev-server": "^4.6.0"
+    "nouislider": "^15.5.0"
   },
   "eslintIgnore": [
     "webpack.config.js"
